fix: z-index value

--- a/stylesheets/layout/layout.css
+++ b/stylesheets/layout/layout.css
@@ -4,7 +4,7 @@
   background-color: var(--white-color);
   position: sticky;
   top:0;
-  z-index:4;
+  z-index:2;
 }
 .header-wrapper {
   width: 90vw;
